trunk/Archive2/93/45febfc6628076/output
main.cpp:3:14: error: '&&' within '||' [-Werror,-Wlogical-op-parentheses]
    return a && b || c; // erreur! :D
           ~~^~~~ ~~
main.cpp:3:14: note: place parentheses around the '&&' expression to silence this warning
    return a && b || c; // erreur! :D
             ^
           (     )
1 error generated.
